GNOME Bugzilla – Bug 725712
rtpsession: Crash when RTCP FIR received with unknown SSRC
Last modified: 2014-03-05 13:29:59 UTC
When using rtpbin and receiving a FIR packet which contains an unknown SSRC in the FCI field, a segfault occurs.
commit 5818a0de1a903880fd94d8789da6217a3476e953 Author: Wim Taymans <wtaymans@redhat.com> Date: Wed Mar 5 14:26:02 2014 +0100 session: handle unknown SSRC in FIR https://bugzilla.gnome.org/show_bug.cgi?id=725712