session: handle unknown SSRC in FIR

https://bugzilla.gnome.org/show_bug.cgi?id=725712